0.12 
  * Simple decor window popup
  * Automatical try connect to Internet
  * Hilldon information about connection refused
  * Automatic redraw icon in display plugin since day per day

0.11
  * Add font color choice
  * Move temperature to top on information window
  * Fix problem click after preference dialog and update weather
  * Add Hilldon information window for update weather