@@ -3,7 +3,8 @@
   * Automatical try connect to Internet
   * Hilldon information about connection refused
   * Automatic redraw icon in display plugin since day per day
-
+  * Automatic redraw first icon
+  
 0.11
   * Add font color choice
   * Move temperature to top on information window
